syntax = "proto3";

package feast;

option java_outer_classname = "DriverAreaProto";

message DriverArea {
  int32 driverId = 1;
  int32 areaId = 2;
}